# validate-commits

./: .coveragerc  .editorconfig  .gitignore  .importlinter  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/workflows/: build_and_publish.yaml  tests.yaml
tests/: app_test.py  helpers.py
tests/features/: conftest.py  test_base_branch.py  test_custom_rules.py  test_feature_branch.py  test_help.py
tests/integrations/: checks_test.py  configuration_test.py  console_test.py  git_test.py
tests/validate_commits/integrations/: checks_test.py  console_test.py
validate_commits/: application.py  cli.py
validate_commits/integrations/: checks.py  configuration.py  console.py  git.py
